--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "./node_modules/.bin/tsc --project config/tsconfig.json",
+    "prettier": "./node_modules/.bin/prettier \"./!(node_modules|public)/**/*.{js,jsx,ts,tsx}\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
   "dependencies": {
     "typescript": "^3.1.1"
   }
