Update package.json to be more fitting

--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "dummy",
+  "name": "practice",
   "version": "1.0.0",
-  "description": "",
+  "description": "A place to practice JS without mucking up real projects",
   "main": "index.js",
   "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Jack Barry",
+  "license": "MIT"
 }
