--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
   "include": ["src"],
   "exclude": ["node_modules"],
   "ignore": ["./index.js"],
