--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
   "author": "Jack Barry",
   "license": "MIT",
   "scripts": {
-    "babel": "./node_modules/.bin/babel src --out-dir dist"
+    "type-check": "tsc -- --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "build": "npm run build:types && npm run build:js"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0"
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "typescript": "^3.1.2"
   }
 }
