--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
     "build": "npm run build:types && npm run build:js"
   },
+  "bin": {
+    "fpcli": "./index.js"
+  },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
