--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "build": "npm run build:types && npm run build:js"
+    "build": "npm run build:types && npm run build:js",
+    "jest": "jest"
   },
   "bin": {
     "fpcli": "./index.js"
@@ -22,7 +23,12 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/jest": "^23.3.5",
+    "@types/mock-fs": "^3.6.30",
     "@types/node": "^10.11.7",
+    "jest": "^23.6.0",
+    "mock-fs": "^4.7.0",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.2"
   }
 }
