--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
-  }
+  },
+  "exclude": ["node_modules", "**/*.spec.*"]
 }
