--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "practice",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A place to practice JS without mucking up real projects",
   "main": "index.js",
   "private": true,
@@ -8,18 +8,26 @@
   "author": "Jack Barry",
   "license": "MIT",
   "scripts": {
-    "type-check": "tsc -- --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "build": "npm run build:types && npm run build:js"
+    "build:types": "tsc -p config/tsconfig.json",
+    "build:js": "babel --config-file ./config/babel.config.js src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "build": "npm run build:types && npm run build:js",
+    "jest": "jest --config=config/jest.config.js --coverage",
+    "clean:lib": "shx rm -rf lib/*"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
+    "jest": "^23.6.0",
+    "shx": "^0.3.2",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.2"
   }
 }
