Prototype constructor method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "tslint.configFile": "./config/tslint.json"
+  "tslint.configFile": "./config/tslint.json",
+  "files.exclude": {
+    "lib": true
+  }
 }
