--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-  "tslint.configFile": "./config/tslint.json",
-  "files.exclude": {
-    "lib": true
-  }
+  "tslint.configFile": "./config/tslint.json"
 }
